--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "karma-firefox-launcher": "~0.1",
     "karma-ie-launcher": "^0.1.5",
     "karma-jasmine": "^0.3.7",
-    "karma-phantomjs-launcher": "~0.1",
+    "karma-phantomjs-launcher": "1.0.2",
     "karma-requirejs": "~0.2",
     "karma-sauce-launcher": "^1.0.0",
     "karma-script-launcher": "~0.1",
